kubernetes/grafana/base/postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-app
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: grafana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-postgres
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: grafana
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: grafana
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: grafana
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-truenas-egress
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: grafana
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.6/32
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgdump-ingress
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: grafana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-ingress
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: grafana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
